kube/cron.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vdv-pkpass-db-abo
  namespace: q-personal
spec:
  podSelector:
    matchLabels:
      app: vdv-pkpass
      part: db-abo
  policyTypes:
    - Ingress
