kube/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vdv-pkpass-django
  namespace: q-personal
  labels:
    app: vdv-pkpass
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vdv-pkpass
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: vdv-pkpass
        part: django
    spec:
      volumes:
        - name: certs
          secret:
            secretName: vdv-pkpass-certs
      containers:
        - name: gunicorn
          image: theenbyperor/vdv-pkpass-django:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "4", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--log-level=debug", "--timeout=90", "vdv_pkpass.wsgi:application"]
          volumeMounts: *volumeMounts
          ports:
            - containerPort: 8000
          envFrom: *envFrom
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vdv-pkpass-django
  namespace: q-personal
spec:
  podSelector:
    matchLabels:
      app: vdv-pkpass
      part: django
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8000
